--- a/trunk/H3CWatcher/H3CWatcher.vcproj
+++ b/trunk/H3CWatcher/H3CWatcher.vcproj
@@ -261,6 +261,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="string_utils"
+			>
+			<File
+				RelativePath=".\string_utils.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\string_utils.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
