异步终止、开启服务会增加复杂性和带来问题。现在终止、开启MyH3C服务的方式是同步的，在与界面不同的另一线程中执行。原先使用的第三方ServiceManager由于无法做到同步地终止、开始服务，因此不再使用。 添加了菜单，为气泡提示增加了标题。 增加了网络信息获取接口NetworkInfo.h。这个接口不知可不可用。

--- a/H3CWatcher/H3CWatcher.vcproj
+++ b/H3CWatcher/H3CWatcher.vcproj
@@ -261,6 +261,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="string_utils"
+			>
+			<File
+				RelativePath=".\string_utils.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\string_utils.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
