--- a/trunk/H3CWatcher/H3CWatcher.rc
+++ b/trunk/H3CWatcher/H3CWatcher.rc
@@ -90,15 +90,19 @@ END
 // Dialog
 //
 
-IDD_ABOUTBOX DIALOGEX 0, 0, 170, 62
+IDD_ABOUTBOX DIALOGEX 0, 0, 171, 151
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "关于 H3CWatcher"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    ICON            128,IDC_STATIC,14,14,21,20
-    LTEXT           "H3CWatcher，1.0 版",IDC_STATIC,42,14,114,8,SS_NOPREFIX
-    LTEXT           "Copyright (C) 2009",IDC_STATIC,42,26,114,8
-    DEFPUSHBUTTON   "确定",IDOK,113,41,50,14,WS_GROUP
+    ICON            IDI_H3CWATCHER,IDC_STATIC,14,14,20,20
+    LTEXT           "H3CWatcher，0.0.1 版",IDC_STATIC,42,14,114,8,SS_NOPREFIX
+    LTEXT           "Copyright (C) 2009",IDC_STATIC,42,114,114,8
+    DEFPUSHBUTTON   "确定",IDOK,114,130,50,14,WS_GROUP
+    LTEXT           "http://code.google.com/p/ih3c/",IDC_STATIC,42,94,114,8,SS_NOPREFIX
+    LTEXT           "中山大学05级 计算机科学与技术",IDC_STATIC,42,34,114,8,SS_NOPREFIX
+    LTEXT           "杨潇:yangxiaogreetings@gmail.com",IDC_STATIC,42,54,114,8,SS_NOPREFIX
+    LTEXT           "胡杨:coolcute@gmail.com",IDC_STATIC,42,74,114,8,SS_NOPREFIX
 END
 
 
@@ -113,9 +117,9 @@ BEGIN
     IDD_ABOUTBOX, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 163
+        RIGHTMARGIN, 164
         TOPMARGIN, 7
-        BOTTOMMARGIN, 55
+        BOTTOMMARGIN, 144
     END
 END
 #endif    // APSTUDIO_INVOKED
