--- a/H3CWatcher/H3CWatcher.vcproj
+++ b/H3CWatcher/H3CWatcher.vcproj
@@ -45,7 +45,7 @@
 				AdditionalOptions="-MP"
 				Optimization="0"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
-				MinimalRebuild="true"
+				MinimalRebuild="false"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
 				UsePrecompiledHeader="2"
@@ -63,7 +63,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="iphlpapi.lib setupapi.lib"
+				AdditionalDependencies="iphlpapi.lib setupapi.lib wininet.lib shell32.lib"
 				OutputFile="$(SolutionDir)bin/Debug/$(ProjectName).exe"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
@@ -141,7 +141,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="iphlpapi.lib setupapi.lib"
+				AdditionalDependencies="iphlpapi.lib setupapi.lib wininet.lib shell32.lib"
 				OutputFile="$(SolutionDir)bin/Release/$(ProjectName).exe"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
