--- a/trunk/h3c_svr/h3c_svr.vcproj
+++ b/trunk/h3c_svr/h3c_svr.vcproj
@@ -59,7 +59,7 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USE_32BIT_TIME_T;_CRT_SECURE_NO_WARNINGS"
 				StringPooling="true"
 				ExceptionHandling="1"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
 				PrecompiledHeaderFile=".\Release/802dot1x.pch"
@@ -586,6 +586,10 @@
 						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\pw.data"
+				>
 			</File>
 		</Filter>
 		<Filter
