--- a/trunk/h3c_svr/h3c_svr.vcproj
+++ b/trunk/h3c_svr/h3c_svr.vcproj
@@ -92,6 +92,7 @@
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Release\$(ProjectName).pdb"
 				GenerateMapFile="false"
 				SubSystem="0"
