fxxk下次再也不用不完善的系统做测试了...

--- a/h3c_svr/h3c_svr.vcproj
+++ b/h3c_svr/h3c_svr.vcproj
@@ -92,6 +92,7 @@
 				GenerateManifest="true"
 				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile=".\Release\$(ProjectName).pdb"
 				GenerateMapFile="false"
 				SubSystem="0"
